fixed bio cards sizing and spacing

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -7,24 +7,23 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  max-width: 1120px;
+  max-width: 1080px;
   width: 80%;
-  margin: 0 auto;
 }
 
 .cards__items {
-  display: flex;
+  align-items: center;
   margin-bottom: 20px;
-  justify-content: center;
 }
 
 .cards__item {
   display: flex;
   flex: 1;
-  max-width: 500px;
-  margin: 0 1rem;
+  max-width: 400px;
+  margin: auto;
   border-radius: 5px;
   background-color: rgb(82, 82, 82);
+  box-sizing: border-box;
 }
 
 .cards__item__link {
@@ -94,13 +93,14 @@
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 960px) {
   .cards__items {
     display: flex;
+    flex-direction: row;
   }
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 960px) {
   .cards__item {
     margin-bottom: 2rem;
   }
